--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0",
-        "majora/generator-bundle": "dev-master"
+        "majora/generator-bundle": "dev-master",
+        "behat/behat": "dev-master",
+        "behat/symfony2-extension": "dev-master",
+        "theofidry/alice-bundle-extension": "^1.1"
     },
     "scripts": {
         "post-install-cmd": [
