--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,2 @@
 app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+    resource: "@AcmeLvSdkBundle/Resources/config/routing/auto/auto_post.yml"
