--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "majora/framework-extra-bundle": "^1.0"
+        "stof/doctrine-extensions-bundle": "~1.2",
+        "majora/framework-extra-bundle": "dev-master#009352a0694e04ed3b8a30d0fc0b2f81eb67142a"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
