--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "stof/doctrine-extensions-bundle": "~1.2",
-        "majora/framework-extra-bundle": "dev-master"
+        "majora/framework-extra-bundle": "dev-master",
+        "guzzlehttp/guzzle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -30,7 +31,8 @@
         "majora/generator-bundle": "dev-master",
         "behat/behat": "dev-master",
         "behat/symfony2-extension": "dev-master",
-        "theofidry/alice-bundle-extension": "^1.1"
+        "behat/mink-extension": "^2.1",
+        "behat/mink-browserkit-driver": "^1.3"
     },
     "scripts": {
         "post-install-cmd": [
