--- a/behat.yml
+++ b/behat.yml
@@ -1,3 +1,6 @@
+imports:
+    - app/config/parameters.yml
+
 default:
     autoload:
         '': %paths.base%/src
@@ -7,9 +10,14 @@ default:
         api_controller:
             type: symfony_bundle
             bundle: AcmeLvApiBundle
-            paths: [ %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features ]
+            paths:
+                #- %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features
+                - %paths.base%/src/Sir/Partner/Bundle/ApiBundle/Features
             contexts:
                 - Acme\Lv\Bundle\ApiBundle\Features\Context\PostApiControllerContext:
+                    em: '@doctrine.orm.entity_manager'
+                    router: '@router'
+                - Sir\Partner\Bundle\ApiBundle\Features\Context\PersonApiControllerContext:
                     em: '@doctrine.orm.entity_manager'
                     router: '@router'
                 - Acme\Lv\Bundle\ApiBundle\Features\Context\PostRouterContext:
@@ -21,21 +29,33 @@ default:
         dal_domain:
             type: symfony_bundle
             bundle: AcmeLvDalBundle
-            paths: [ %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features ]
+            paths:
+                #- %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features
+                - %paths.base%/src/Sir/Partner/Bundle/ApiBundle/Features
             contexts:
                 - Acme\Lv\Bundle\ApiBundle\Features\Context\PostDalDomainContext:
                     domain: '@acme.post.domain'
                     loader: '@acme.post.loader'
                     em: '@doctrine.orm.entity_manager'
+                - Sir\Partner\Bundle\ApiBundle\Features\Context\PersonDalDomainContext:
+                    domain: '@sir.person.domain'
+                    loader: '@sir.person.loader'
+                    em: '@doctrine.orm.entity_manager'
         api_domain:
             type: symfony_bundle
             bundle: AcmeLvDalBundle
-            paths: [ %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features ]
+            paths:
+                #- %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features
+                - %paths.base%/src/Sir/Partner/Bundle/ApiBundle/Features
             contexts:
                 - Acme\Lv\Bundle\ApiBundle\Features\Context\PostApiDomainContext:
                     em: '@doctrine.orm.entity_manager'
                     domain: '@acme.post.api_domain'
                     loader: '@acme.post.api_loader'
+                - Sir\Partner\Bundle\ApiBundle\Features\Context\PersonApiDomainContext:
+                    em: '@doctrine.orm.entity_manager'
+                    domain: '@sir.person.api_domain'
+                    loader: '@sir.person.api_loader'
                 - Acme\Lv\Bundle\ApiBundle\Features\Context\PostRouterContext:
                     router: '@router'
                     host: 'localhost'
