--- a/behat.yml
+++ b/behat.yml
@@ -7,14 +7,14 @@ default:
     extensions:
         Behat\Symfony2Extension: ~
     suites:
-        dal_domain:
-            type: symfony_bundle
-            bundle: Test2Test2DalBundle
-            paths:
-                #- %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features
-                - %paths.base%/src/Test2/Test2/Bundle/ApiBundle/Features
-            contexts:
-                - Test2\Test2\Bundle\ApiBundle\Features\Context\Test2Context:
-                    domain: '@test2.test2.domain'
-                    loader: '@test2.test2.loader'
-                    em: '@doctrine.orm.entity_manager'
+        #dal_domain:
+        #    type: symfony_bundle
+        #    bundle: myBundle
+        #    paths:
+        #        #- %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features
+        #        - %paths.base%/src/Test2/Test2/Bundle/ApiBundle/Features
+        #    contexts:
+        #        - Test2\Test2\Bundle\ApiBundle\Features\Context\Test2Context:
+        #             domain: '@test2.test2.domain'
+        #            loader: '@test2.test2.loader'
+        #            em: '@doctrine.orm.entity_manager'
