Move behat.yml and add annotation for MajoraGenerator

--- a/behat.yml
+++ b/behat.yml
@@ -1,20 +1,3 @@
 imports:
-    - app/config/parameters.yml
+    - app/config/behat.yml
 
-default:
-    autoload:
-        '': %paths.base%/src
-    extensions:
-        Behat\Symfony2Extension: ~
-    suites:
-        dal_domain:
-            type: symfony_bundle
-            bundle: Sir1Partner3DalBundle
-            paths:
-                #- %paths.base%/src/Acme/Lv/Bundle/ApiBundle/Features
-                - %paths.base%/src/Sir1/Partner3/Bundle/ApiBundle/Features
-            contexts:
-                - Sir1\Partner3\Bundle\ApiBundle\Features\Context\Person2Context:
-                    domain: '@sir1.person2.domain'
-                    loader: '@sir1.person2.loader'
-                    em: '@doctrine.orm.entity_manager'
